--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,35 @@
-# Node modules
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Next.js build output
-.next/
-out/
+# testing
+/coverage
 
-# Logs
-logs/
-*.log
+# next.js build output
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Testing
-coverage/
-
-# Environment variables
+# environment variables
+.env*.local
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-# Production
-build/
-dist/
+# vercel
+.vercel
 
-# TypeScript cache
+# typescript
 *.tsbuildinfo
-
-# VSCode
-.vscode/
-*.code-workspace
-
-# MacOS
-.DS_Store
-
-# Windows
-Thumbs.db
-
-# Package lock files (optional, if using yarn instead of npm)
-package-lock.json
-yarn.lock
-
-# ESlint c
+next-env.d.ts
